--- a/LSWIII/AUDIO/TRACKS.CFG
+++ b/LSWIII/AUDIO/TRACKS.CFG
@@ -30,7 +30,7 @@ Path "Audio\Tracks\Music\"
 Bank "Titles" ; Title Screen
 Track Class "Quiet" Filename "Titles_Lucas_Mx" Volume 0.22
 
-Bank "TextScroll" ; Opening Crawl
+Bank "TextScroll" ; Opening Crawl (hardcoded)
 Track Class "Quiet" Filename "TextScroll" Volume 0.20
 
 Bank "StatusScreen" ; Level Complete
@@ -42,10 +42,10 @@ Track Class "Quiet" Filename "Credits2m" Volume 0.35
 
 ; RTS Victory Fanfare (Ground Assaults and 2P Arcade)
 
-Bank "PVP_RepublicWin"
+Bank "PVP_RepublicWin" (hardcoded)
 Track Class "Action" Filename "PVP_RepublicWin" Volume 0.30 Cue 00.00
 
-Bank "PVP_SeparatistWin"
+Bank "PVP_SeparatistWin" (hardcoded)
 Track Class "Action" Filename "PVP_SeparatistWin" Volume 0.30 Cue 00.00
 
 
@@ -78,6 +78,64 @@ Bank "Kam_Disco" ; Disco Music
 Track Class "Quiet" Filename "Kam_Disco" Volume 0.16 Cue 00.00
 ;Track Class "Ambience" Filename "EvilLair_amb" Volume 0.20
 
+Bank "Venator_Demo_Hub" ; Called in eponymous unused level, but never defined in vanilla
+Track Class "Quiet" Filename "Resolute_Hub_Qui" Volume 0.20 Cue 00.00 Cue 19.59 Cue 58.91 Cue 75.40 Cue 95.33
+Track Class "Ambience" Filename "SpaceShip_amb" Volume 0.20
+
+
+
+; === Ground Assault (RTS/PVP) ===
+
+;;; Christophsis - USING WeaponsFactory_A
+
+
+;;; Coruscant - USING ZilloBeast_B
+
+
+;;; Dead Moon of Antar - USING DefOfThePeace_B
+
+
+;;; Florrum - USING DefOfThePeace_A
+
+
+;;; Geonosis - USING BattleOfGeonosis
+
+
+;;; Malastare - USING WeaponsFactory_A
+
+
+;;; Maridun - USING DefOfThePeace_B
+
+
+;;; Naboo - USING DefOfThePeace_B
+
+
+;;; Quell - USING ZilloBeast_B
+
+
+;;; Rishi Moon - USING WeaponsFactory_A
+
+
+;;; Rugosa - USING DefOfThePeace_A
+
+
+;;; Ruusan Moon - USING BattleOfGeonosis
+
+
+;;; Ryloth - USING BattleOfGeonosis 
+
+; (this one seems like another dumb choice at first, but BattleOfGeonosis
+; is actually a mix of several themes, including Ryloth ones)
+
+
+;;; Saleucami - USING ZilloBeast_B
+
+
+;;; Tatooine - USING GunganGeneral
+
+
+;;; Vassek - USING ZilloBeast_B
+
 
 
 ; === Standalone levels ===
@@ -105,7 +163,7 @@ Bank "ZilloBeast_A" ; Ground Assault section
 Track Class "Action" Filename "ZilloBeast_A_Act" Volume 0.14 ;Cue 00.00 Cue 00.00 Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.30
 
-Bank "ZilloBeast_B" ; Boss battle
+Bank "ZilloBeast_B" ; Boss battle - also used as generic Ground Assault music
 Track Class "Action" Filename "ZilloBeast_B_Act" Volume 0.14 ;Cue 00.00 Cue 00.00 Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.30
 
@@ -243,14 +301,14 @@ Track Class "Ambience" Filename "Desert_Windy_amb" Volume 0.50
 
 ;;; 1 - Battle of Geonosis
 
-Bank "BattleOfGeonosis" 
+Bank "BattleOfGeonosis" ; Also used as generic Ground Assault music
 Track Class "Action" Filename "BattleOfGeonosis_Act" Volume 0.15 Cue 00.00 Cue 15.83 Cue 95.24 Cue 204.08 Cue 261.30
 Track Class "Ambience" Filename "Desert_Windy_amb" Volume 0.45
 
 
 ;;; 2 - Gungan General
 
-Bank "GunganGeneral"
+Bank "GunganGeneral" ; also used as generic Ground Assault music
 Track Class "Action" Filename "GunganGeneral_Act" Volume 0.16 Cue 00.00 Cue 38.27 Cue 126.10 Cue 184.39 Cue 266.72
 Track Class "Ambience" Filename "Desert_Windy_amb" Volume 0.60
 
@@ -264,18 +322,18 @@ Track Class "Ambience" Filename "SpaceBattle_amb" Volume 0.30
 
 ;;; 4 - Defenders of Peace
 
-Bank "DefOfThePeace_A" ; Act 1 (possibly hardcoded)
+Bank "DefOfThePeace_A" ; Act 1 - also used as generic Ground Assault music
 Track Class "Action" Filename "DefOfThePeace_Act1" Volume 0.16 Cue 00.00 Cue 13.70 Cue 72.37 Cue 85.40
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.25
 
-Bank "DefOfThePeace_B" ; Act 2 (possibly hardcoded)
+Bank "DefOfThePeace_B" ; Act 2 (possibly hardcoded) - also used as generic Ground Assault music
 Track Class "Action" Filename "DefOfThePeace_Act2" Volume 0.18 Cue 00.00 Cue 36.17 Cue 66.39 Cue 91.24
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.25
 
 
 ;;; 5 - Weapons Factory
 
-Bank "WeaponsFactory_A" ; Ground Assault section
+Bank "WeaponsFactory_A" ; Ground Assault section - also used as generic Ground Assault music
 Track Class "Action" Filename "WeaponsFactory_A_Act" Volume 0.20 Cue 00.00 Cue 10.93 Cue 31.68 Cue 60.81 Cue 73.28
 Track Class "Ambience" Filename "Desert_Windy_amb" Volume 0.60
 
@@ -402,13 +460,13 @@ Track Class "Action" Filename "Gor_Act" Volume 0.15 Cue 00.00 Cue 10.96 Cue 23.1
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.28
 
 ; Use new_A
-Bank "Rookies_A_UpperOutdoor" ; Exterior
+Bank "Rookies_A_UpperOutdoor" ; Exterior (possibly hardcoded)
 Track Class "Quiet" Filename "Rookies_A_Qui" Volume 0.19 Cue 00.00 Cue 32.18 Cue 58.04 Cue 89.68 Cue 102.51
 Track Class "Action" Filename "Rookies_A_Act" Volume 0.14 Cue 00.00 Cue 24.85 Cue 42.61 Cue 51.85 Cue 60.35
 Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.20
 
 ; Use new_A
-Bank "Rookies_A_Indoor" ; Interior - 
+Bank "Rookies_A_Indoor" ; Interior - pre-invasion (possibly hardcoded)
 Track Class "Quiet" Filename "Rookies_A_Qui" Volume 0.20 Cue 00.00 Cue 32.18 Cue 58.04 Cue 89.68 Cue 102.51
 Track Class "Action" Filename "Rookies_A_Act" Volume 0.16 Cue 00.00 Cue 24.85 Cue 42.61 Cue 51.85 Cue 60.35
 Track Class "Ambience" Filename "RepublicBase_amb" Volume 0.40
