--- a/LB2/AUDIO/TRACKS.CFG
+++ b/LB2/AUDIO/TRACKS.CFG
@@ -47,12 +47,10 @@ Track "SupermanIntro" Filename "SupermanIntro" Cue 00.00 Volume 0.40
 ;;; Misc
 
 Track "HubCameraPan" Filename "HubCameraPan" Cue 00.00 Volume 0.30 CrossFadeUpTime 1.5 CrossFadeDownTime 5.0
-Track "HubBoss_Act" Filename "HubBoss_Act" Cue 00.00 Volume 0.40
 Track "BM_Disco" Filename "BM_Disco" Cue 00.00
+Track "GothamCity_Qui" Filename "GothamCity_Qui" Cue 00.00 Cue 33.70 Cue 71.30 ;Volume 0.70 ; mix of multiple tracks, including Up The Cathedral
 
 ;;; Danny Elfman
-
-
 
 ; Attack of the Batwing
 Track "AttackOfTheBatwing_Act" Filename "AttackOfTheBatwing_Act" Cue 00.00 Cue 47.91 Cue 94.30 Cue 136.18 Cue 205.73 ;Volume 0.28
@@ -60,7 +58,7 @@ Track "AttackOfTheBatwing_TC" Filename "AttackOfTheBatwing_Act" Cue 103.7 Volume
 
 ; Up the Cathedral
 Track "UpCathedral_Qui" Filename "UpCathedral_Qui" Cue 04.88 Cue 18.44 Cue 37.48 Cue 75.14 ;Volume 0.35
-Track "GothamCity_Qui" Filename "GothamCity_Qui" Cue 00.00 Cue 33.70 Cue 71.30 ;Volume 0.70
+
 
 ; Batcave
 Track "BatCave_Hub" Filename "BatCave_Hub" Cue 122.39 Cue 44.78 Cue 82.82 ;Volume 0.70
@@ -84,7 +82,7 @@ Track "5-AceA_Qui" Filename "5-AceA_Qui" Cue 10.50 Cue 43.86 Cue 86.10 Cue 122.3
 
 ; Clown Attack
 Track "ClownAttack_Qui" Filename "ClownAttack_Qui" Cue 00.00 Cue 31.51 ;Volume 0.50
-
+Track "HubBoss_Act" Filename "HubBoss_Act" Cue 00.00 Volume 0.40
 
 
 ;;; Rob Westwood
@@ -126,8 +124,9 @@ Track "MainLex_Act" Filename "MainLex_Act" Cue 00.00 Cue 40.20 Cue 77.53 Cue 127
 
 ;;; John Williams
 
-; Superman Theme (Concert Version) - hardcoded to play when Supes flies in the hub
-Track "SupermanFlying" Filename "SupermanFlying" Cue 264.62 Cue 39.09 Cue 67.07 Cue 169.57 Cue 206.75 Volume 0.55 CrossFadeUpTime 3.0 CrossfadeDownTime 5.0
+; Superman Theme (Concert Version)
+Track "SupermanTheme_LP" Filename "SupermanFlying" Cue 00.00 Volume 0.55
+Track "SupermanFlying" Filename "SupermanFlying" Cue 264.62 Cue 39.09 Cue 67.07 Cue 169.57 Cue 206.75 Volume 0.55 CrossFadeUpTime 3.0 CrossfadeDownTime 5.0 ; hardcoded to play when Supes flies in the hub
 
 
 
@@ -156,12 +155,19 @@ Track "HubTrigger15_JLA" Filename "JLAFinalBoss_Act" Cue 00.00 Cue 63.48 Cue 128
 ; ===============================================
 
 Path "Audio\Tracks\Music\Stings"
+
+; Generic
 Track "Sting1" Filename "Sting1" Cue 00.00
 Track "Sting2" Filename "Sting2" Cue 00.00
 Track "Sting3" Filename "Sting3" Cue 00.00
 Track "Sting4" Filename "Sting4" Cue 00.00
 
-
+; Specific motifs
+Path "Audio\Tracks\Music\"
+Track "VehicleIntro" Filename "Vehicle_Intro" Cue 00.00 Volume 0.26 CrossFadeUpTime 1.0 CrossFadeDownTime 3.0
+Track "SharpenedSixthTail" Filename "Suit_Intro" Cue 00.00 Volume 0.35
+Track "SupermanMotif" Filename "SupermanIntro" Cue 00.00 Volume 0.40 
+Path "Audio\Tracks\Music\Stings"
 
 ; ===============================================
 ; ============  Ambience Streams  ===============
