--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -772,7 +772,7 @@ Transition Name "ASTMATransitionDown" BeatBoundary 1 FadeTimeIn 2.5 FadeLeadIn 2
 Relationship Name "ASTM_A_QuiToAct" Stages "ASTM_A_Qui" "ASTM_A_MidAct" ; Transition "ASTMATransitionUp"
 Relationship Name "ASTM_A_ActToQui" Stages "ASTM_A_MidAct" "ASTM_A_Qui" ; Transition "ASTMATransitionDown"
 
-; Compostion
+; Composition
 Composition Name "ASTM_A" IntensityStage "ASTM_A_Qui" IntensityStage "ASTM_A_MidQui" IntensityStage "ASTM_A_MidAct" RelationShip "ASTM_A_QuiToAct" Relationship "ASTM_A_ActToQui"
 
 
