--- a/LB2/AUDIO/BANKS.CFG
+++ b/LB2/AUDIO/BANKS.CFG
@@ -2,7 +2,7 @@
 ; ==                                                    ==
 ; ==     LEGO Batman 2  -  Music banks config file      ==
 ; ==                                                    ==
-; ==                Cleanup by SirYodaJedi              ==
+; ==             Cleaned up by SirYodaJedi              ==
 ; ==                                                    ==
 ; ========================================================
 
