--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -447,6 +447,17 @@ Relationship Name "Ysmault_Act_to_Qui"       Stages "12Ysmault_Act" "12Ysmault_Q
 Composition Name "12YsmaultA" IntensityStage "12Ysmault_Qui" IntensityStage "12Ysmault_Act" Relationship "Ysmault_Qui_to_Act" Relationship "Ysmault_Act_to_Qui"
 
 
+; === YsmaultA ===
+
+;;; Explore
+
+; USING YsmaultA
+
+
+;;; Boss Fight 
+
+; USING TRACK ysmault_boss
+
 
 ;========================
 ; 13 Okaara
