--- a/LSWIII/AUDIO/TRACKS.CFG
+++ b/LSWIII/AUDIO/TRACKS.CFG
@@ -25,7 +25,7 @@ Path "Audio\Tracks\Music\"
 
 ;;; UI
 
-; Bespoke
+; Menus
 
 Bank "Titles" ; Title Screen
 Track Class "Quiet" Filename "Titles_Lucas_Mx" Volume 0.22
@@ -68,7 +68,7 @@ Track Class "Action" Filename "SpaceCombat_Act" Volume 0.45 Cue 06.20 Cue 18.14 
 Track Class "Ambience" Filename "SpaceBattle_amb" Volume 0.40
 
 
-;;; Other (new duplicates to help modders)
+;;; New duplicates to help modders
 
 Bank "CantinaBand" ; Cantina 
 Track Class "Quiet" Filename "Cantina" Volume 0.16
@@ -81,6 +81,70 @@ Track Class "Quiet" Filename "Kam_Disco" Volume 0.16 Cue 00.00
 Bank "Venator_Demo_Hub" ; Called in eponymous unused level, but never defined in vanilla
 Track Class "Quiet" Filename "Resolute_Hub_Qui" Volume 0.20 Cue 00.00 Cue 19.59 Cue 58.91 Cue 75.40 Cue 95.33
 Track Class "Ambience" Filename "SpaceShip_amb" Volume 0.20
+
+
+;;; Ambience only
+
+Bank "GeonosianArena_NoMusic" ; bespoke
+Track Class "Ambience" Filename "GeonosianArena_amb" Volume 0.45
+
+Bank "GeonosianArenaBattle_NoMusic" ; bespoke
+Track Class "Ambience" Filename "GeonosianArenaBattle_amb" Volume 0.45
+
+Bank "RepublicBase_NoMusic" ; generic interior
+Track Class "Ambience" Filename "RepublicBase_amb" Volume 0.45
+
+Bank "EvilLair_NoMusic" ; generic interior (ominous)
+Track Class "Ambience" Filename "EvilLair_amb" Volume 0.45
+
+Bank "SpaceBattle_NoMusic" ; space vehicle levels
+Track Class "Ambience" Filename "SpaceBattle_amb" Volume 0.45
+
+Bank "SpaceBattleInt_NoMusic" ; spaceship interior (during battle)
+Track Class "Ambience" Filename "SpaceBattleInt_amb" Volume 0.45
+
+Bank "Spaceship_NoMusic" ; spaceship interior (Calm)
+Track Class "Ambience" Filename "Spaceship_amb" Volume 0.45
+
+Bank "CtrlRoom_NoMusic" ; Star Destroyer bridge in GrievousIntrigue_A (but not the hub) 
+Track Class "Ambience" Filename "CtrlRoom_amb" Volume 0.45
+
+Bank "HiddenEnemy_D_NoMusic" ; free fall
+Track Class "Ambience" Filename "HiddenEnemy_D_amb" Volume 0.45
+
+Bank "HostageCrisis_A_NoMusic" ; Coruscant traffic
+Track Class "Ambience" Filename "HostageCrisis_A_amb" Volume 0.45
+
+Bank "Cantina_NoMusic" ; restaurant
+Track Class "Ambience" Filename "Cantina_amb" Volume 0.45
+
+Bank "Cave_NoMusic" ; cave (tight)
+Track Class "Ambience" Filename "Cave_amb" Volume 0.45
+
+Bank "Cave_LrgRoom_NoMusic" ; cave (spacious)
+Track Class "Ambience" Filename "Cave_LrgRoom_amb" Volume 0.45
+
+Bank "Jungle_Thick_NoMusic" ; jungle (Dagobah-esque)
+Track Class "Ambience" Filename "Jungle_Thick_amb" Volume 0.45
+
+Bank "Jungle_Desolate_NoMusic" ; jungle (unnerving)
+Track Class "Ambience" Filename "Jungle_Desolate_amb" Volume 0.45
+
+Bank "Desert_Night_NoMusic" ; desert (nighttime)
+Track Class "Ambience" Filename "Desert_Night_amb" Volume 0.45
+
+Bank "Desert_Windy_NoMusic" ; desert (daytime)
+Track Class "Ambience" Filename "Desert_Windy_amb" Volume 0.45
+
+Bank "Sandstorm_NoMusic" ; heavy winds
+Track Class "Ambience" Filename "Sandstorm_amb" Volume 0.45
+
+Bank "RushingWind_NoMusic" ; very heavy winds
+Track Class "Ambience" Filename "RushingWind_amb" Volume 0.45
+
+Bank "Outside_Windy_Desolate_NoMusic" ; winds in the middle of nowhere
+Track Class "Ambience" Filename "Outside_Windy_Desolate_amb" Volume 0.45
+
 
 
 
