--- a/LB3/AUDIO/SOUNDEVENTSTREAMS.CFG
+++ b/LB3/AUDIO/SOUNDEVENTSTREAMS.CFG
@@ -1,8 +1,10 @@
 ; =========================================================================
 ; ==                                                                     ==
-; ==  LEGO Hobbit  -  Music/Ambience/Cutscene CFG file                   ==
+; ==  LEGO Batman 3  -  Music/Ambience/Cutscene CFG file                 ==
 ; ==                                                                     ==
 ; ==  MASTER Edited by  Mike de Belle and David Whittaker                ==
+; ==                                                                     ==
+; ==  Cleaned up by SirYodaJedi                                          ==
 ; ==                                                                     ==
 ; ==  Documentation: http://tt-intranet/wiki/index.php/Audio#Tracks.cfg  ==
 ; ==                                                                     ==
