--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -1,8 +1,10 @@
 ; ===================================================================
 ; ==                                                               ==
-; ==  LEGO Batman 3  -  Music compositions config file             ==
+; ==       LEGO Batman 3  -  Music compositions config file        ==
 ; ==                                                               ==
-; ==                  Matt Phillips                                ==
+; ==                        Matt Phillips                          ==
+; ==                                                               ==
+; ==                  Cleaned up by SirYodaJedi                    ==
 ; ==                                                               ==
 ; ===================================================================
 
