--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -716,7 +716,7 @@ Composition Name "HOJ_adaptive1" IntensityStage "HOJ_Qui" IntensityStage "HOJ_Ac
 
 ; === Oa (Green) ===
 
-; USING 11NokB1_OutsideExplore
+; USING TRACK 11NokB1_OutsideExplore
 
 
 ; === Nok (Indigo; visually purplish blue) ===
