--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -621,7 +621,7 @@ Composition Name "60sBM_batusi_fx" IntensityStage "60sBM_batusi_fx"
 ; HUB
 ;========================
 
-; === Default ===
+; === Totally not a Stargate ===
 
 ; USING BatcaveB_Cave
 
@@ -689,7 +689,7 @@ Composition Name "HOJ_adaptive1" IntensityStage "HOJ_Qui" IntensityStage "HOJ_Ac
 
 ; === Batcave ===
 
-;;; BatcaveMain (Is this used?)
+;;; BatcaveMain
 
 ; USING HOJ_adaptive1
 
