--- a/LB3/AUDIO/SOUNDEVENTSTREAMS.CFG
+++ b/LB3/AUDIO/SOUNDEVENTSTREAMS.CFG
@@ -211,14 +211,26 @@ Stream Name  "19TheFinalConfrontationCut"                  Filename "19TheFinalC
 Stream Name  "04WatchTowerB_FinalConfrontation_Loop"       Filename "04WatchTowerB_FinalConfrontation_Loop"     Bus "MixMusic"
 
 
-;;; Batman 1966
+;;; Batman 1966 (classic and bespoke)
 
+; Bat66 Theme (mono)
 ;Stream Name  "01-01- Batman Theme (from Batman A Greenway Production in association_edit2mv2"         Filename "01-01- Batman Theme (from Batman A Greenway Production in association_edit2mv2"   Bus "MixMusic"
-Stream Name  "Batman-MainTitle[ThemeFromTVSeries] 1966 [Fox Master]"         Filename "Batman-MainTitle[ThemeFromTVSeries] 1966 [Fox Master]"   Bus "MixMusic"
-Stream Name  "60sTheme_Loop"                                                 Filename "60sTheme_Loop"                             Bus "MixMusic"
-Stream Name  "60sBM_batusi_fx"                                               Filename "60s_batusi_transcribed-02"                 Bus "MixMusic"
-Stream Name  "60sBM_batcave_low_01"                                          Filename "60sBM_batcave_low_01"                      Bus "MixMusic"
-Stream Name  "60sBM_dineract_wthopen_fx"                                     Filename "60sBM_dineract_wthopen_fx"                 Bus "MixMusic"
+Stream Name  "Batman-MainTitle[ThemeFromTVSeries] 1966 [Fox Master]"  Filename "Batman-MainTitle[ThemeFromTVSeries] 1966 [Fox Master]"   Bus "MixMusic"
+Stream Name  "60sTheme_Loop"                                          Filename "60sTheme_Loop"                                           Bus "MixMusic"
+
+; Bat66 Theme (stereo) - Is 22 seconds shorter than album version, for some reason.
+Path "Audio\Streams\Cutscenes\"
+Stream Name  "60sTheme_Stereo"                                        Filename "17PostCredits_BG_SFX"                                    Bus "MixMusic"
+Path "Audio\Streams\Music\"
+
+; Holy psychoacoustics, Batman! Our Batcave song is in stereo! 
+Stream Name  "60sBM_batcave_low_01"                                   Filename "60sBM_batcave_low_01"                                    Bus "MixMusic"
+
+; BatDiner (mono)
+Stream Name  "60sBM_dineract_wthopen_fx"                              Filename "60sBM_dineract_wthopen_fx"                               Bus "MixMusic"
+
+; Batusi (mono) - Stereo version is in DLC2.
+Stream Name  "60sBM_batusi_fx"                                        Filename "60s_batusi_transcribed-02"                               Bus "MixMusic"
 
 
 ;;; Superman 1978 - John Williams
