--- a/LSWIII/AUDIO/TRACKS.CFG
+++ b/LSWIII/AUDIO/TRACKS.CFG
@@ -340,7 +340,7 @@ Track Class "Quiet" Filename "StormOverRyloth_A_Qui" Volume 0.26 Cue 00.00 Cue 4
 Track Class "Ambience" Filename "SpaceBattle_amb" Volume 0.25
 
 
-;;; 5 - Innocents on Ryloth
+;;; 5 - Innocents of Ryloth
 
 Bank "InnocentsOfRyloth_A" ; Exterior
 Track Class "Quiet" Filename "InnocentsOfRyloth_A_Qui" Volume 0.24 Cue 00.00 Cue 23.39 Cue 70.71 Cue 86.61 Cue 107.38
