Additional note about stings in LB3 Compositions.cfg

--- a/LB3/AUDIO/COMPOSITIONS.CFG
+++ b/LB3/AUDIO/COMPOSITIONS.CFG
@@ -773,7 +773,7 @@ IntensityStage Name "ASTM_A_Qui" Intensity 0.0 0.5 Track "12ASTM_A_Qui" TimeSign
 IntensityStage Name "ASTM_A_MidQui" Intensity 0.5 0.9 Track "12ASTM_A_MidQui" TimeSignature 4/4 BPM 103 Volume 0.30 SustainTime 2.0
 IntensityStage Name "ASTM_A_MidAct" Intensity 0.9 1.0 Track "12ASTM_A_MidAct" TimeSignature 4/4 BPM 103 Volume 0.35 SustainTime 3.0
 
-; Sting - commented out because not in LB3
+; Sting - commented out because not in LB3; The stinger music needs to be put as a sound effect in SoundEventSamples with the same bus as the rest of the track for it to work
 ;Sting Name "12ASTM_Overblown" SoundEvent "12ASTM_Overblown" Duration 1
 
 ; Custom Transitions
