--- a/LSWIII/AUDIO/SAMPLES.CFG
+++ b/LSWIII/AUDIO/SAMPLES.CFG
@@ -2997,8 +2997,7 @@ Sample name "Drown" Filename "_Chars\Drown" Volume 0.7 RandVol 0.20 RandPitch 0.
 ; === Vehicles (misplaced) ===
 
 Sample name "TowCable_Fire" Filename "VEHICLE\TowCable_Fire" RandVol 0.25 RandPitch 0.10
-Sample name "TowCable_Detach" 
-Filename "VEHICLE\TowCable_Detach" RandVol 0.25 RandPitch 0.10
+Sample name "TowCable_Detach" Filename "VEHICLE\TowCable_Detach" RandVol 0.25 RandPitch 0.10
 
 Sample name "TowCable_Snap" Filename "VEHICLE\TowCable_Snap" RandVol 0.25 RandPitch 0.10
 
