--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -54,24 +54,27 @@ Track Class "Quiet" Filename "Quiet1" Volume 0.30 Downmix StereoOnly Cue 00.00 C
 
 ; Status screens - note that only StatusScreen3 ("He's a Pirate") is used
 
-Bank "StatusScreen1" ; Slow
+Bank "StatusScreen1" ; Slow ("The Medallion Calls")
 Track Class "Quiet" Filename "StatusScreen1" Volume 0.30 Downmix StereoOnly Cue 00.00
 
 Bank "StatusScreen2" ; Jack Sparrow
 Track Class "Quiet" Filename "StatusScreen2" Volume 0.30 Downmix StereoOnly Cue 00.00
 
-Bank "StatusScreen3" ; Action 1
+Bank "StatusScreen3" ; Action 1 ("He's a Pirate")
 Track Class "Quiet" Filename "StatusScreen3" Volume 0.28 Downmix StereoOnly Cue 00.00
 
-Bank "StatusScreen4" ; Action 2
+Bank "StatusScreen4" ; Action 2 ("Skull and Crossbones")
 Track Class "Quiet" Filename "StatusScreen4" Volume 0.22 Downmix StereoOnly Cue 00.00
 
 
 ;;; Hub
 
-Bank "Hub_A"
+Bank "Hub_A" ; outside and taverns, including nighttime - also used by _B and _C
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
+
+; Hub_D - Tia Dalma's shack (USING Upriver_C)
+
 
 ;;; Bonus Level - The Ride
 
@@ -97,20 +100,20 @@ Track Class "Quiet" Filename "TheRideMusic" Volume 0.45 Downmix StereoOnly Cue 0
 
 ;;; 1-1PortRoyal ("PortRoyal")
 
-Bank "PortRoyalA"
+Bank "PortRoyalA" ; Gibb's smithy
 Track Class "Quiet" Filename "Quiet1" Volume 0.27 Downmix StereoOnly Cue 00.00 Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1" Volume 0.17 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "StoneRoom_amb" Volume 0.70
 
-Bank "PortRoyalB"
+Bank "PortRoyalB" ; Prison, give a dog a bone
 Track Class "Quiet" Filename "MidAction1" Volume 0.17 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "StoneRoomDeep_amb" Volume 0.35
 
-Bank "PortRoyalB_Outside"
+Bank "PortRoyalB_Outside" ; cliffs outside prison (Free Play)
 Track Class "Quiet" Filename "MidAction1" Volume 0.17 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindMed_amb" Volume 0.85
 
-Bank "PortRoyalC"
+Bank "PortRoyalC" ; port town aero dive (also port itself)
 Track Class "Quiet" Filename "Uneasy1" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 23.74 Cue 44.98 Cue 57.19
 Track Class "Action" Filename "StatusScreen2" Volume 0.29 Downmix StereoOnly Cue 11.50 Cue 57.08 Cue 72.97
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.45
@@ -307,15 +310,15 @@ Track Class "Ambience" Filename "SingaporeExt_amb" Volume 0.75
 
 ;;; 3-2Locker ("Davy Jones' Locker")
 
-Bank "Locker_A"
+Bank "Locker_A" ; Multiple Jacks
 Track Class "Quiet" Filename "Locker_A_Qui" Volume 0.40 Downmix StereoOnly
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.05
 
-Bank "Locker_B"
+Bank "Locker_B" ; Up Is Down (below decks)
 Track Class "Quiet" Filename "StatusScreen3" Volume 0.16 Downmix StereoOnly
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.45
 
-Bank "Locker_C"
+Bank "Locker_C" ; Up Is Down (on deck)
 Track Class "Quiet" Filename "StatusScreen3" Volume 0.20 Downmix StereoOnly Cue 80.60
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.75
 
@@ -375,92 +378,94 @@ Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
 ;;; 4-1London ("London Town")
 
-Bank "London_A"
+Bank "London_A" ; Great Hall
 Track Class "Action" Filename "London_Act" Volume 0.22 Downmix StereoOnly Cue 00.00 ;Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "StoneRoom_amb" Volume 0.70
 
-Bank "London_B"
+Bank "London_B" ; Rooftops
 Track Class "Action" Filename "StatusScreen2" Volume 0.30 Downmix StereoOnly Cue 00.00 ;Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "LondonRoofTop_amb" Volume 0.60
 
-Bank "London_C"
+Bank "London_C" ; Carriage Chase 
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "London_C_amb" Volume 0.40
 
-Bank "London_D"
+Bank "London_D" ; Vs. Angelica Jack (tavern)
 Track Class "Action" Filename "StatusScreen2" Volume 0.28 Downmix StereoOnly Cue 00.00 ;Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
 
 ;;; 4-2QueenAnn ("Queen Anne's Revenge")
 
-Bank "QueenAnn_A"
+Bank "QueenAnn_A" ; Blackbeard Appears (on deck)
 Track Class "Action" Filename "Action2_Evil" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.35
 
-Bank "QueenAnn_B"
+Bank "QueenAnn_B" ; Mutiny - lower deck (quiet)
 Track Class "Quiet" Filename "Uneasy1" Volume 0.36 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.55
 
-Bank "QueenAnn_B_Act"
+Bank "QueenAnn_B_Act"; Mutiny - upper deck (action)
 Track Class "Action" Filename "Action1_Evil" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.55
 
-Bank "QueenAnn_C"
+Bank "QueenAnn_C" ; Blackbeard's Cabin (Free Play only)
 Track Class "Quiet" Filename "ShipwreckCove_Qui" Volume 0.38 Downmix StereoOnly Cue 01.44
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.65
 
-Bank "Angelica_MusicBox"
+Bank "Angelica_MusicBox" ; puzzle-induced - accessed in _C
 Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 01.44
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.65
 
 
 ;;; 4-3WhiteCap ("White Cap Bay")
 
-Bank "WhiteCap_A"
+Bank "WhiteCap_A" ; Mermaids
 Track Class "Quiet" Filename "WhiteCap_Qui" Volume 0.36 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "MidAction1" Volume 0.26 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "SeaShore_Med_amb" Volume 0.40
 
-Bank "WhiteCap_B"
+Bank "WhiteCap_B" ; lighthouse - upper level
 Track Class "Quiet" Filename "WhiteCap_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "WindMed_amb" Volume 0.55
 
-Bank "WhiteCap_B_Other"
+Bank "WhiteCap_B_Other" ; lighthouse - lower level
 Track Class "Quiet" Filename "WhiteCap_Qui" Volume 0.35 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.10
 
 
 ;;; 4-4PoncedeLeon ("A Spanish Legacy")
 
-Bank "PonceDeLeon_A"
+Bank "PonceDeLeon_A" ; Ponce De Leon's ship
 Track Class "Quiet" Filename "JacksIsland_B_Qui" Volume 0.22 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.35
 
-Bank "PonceDeLeon_C"
+; PonceDeLeon_B - Spaniard Camp (USING PonceDeLeon_C)
+
+Bank "PonceDeLeon_C" ; Spaniard boss fight and Palm Tree Escape
 Track Class "Quiet" Filename "PonceDeLeon_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00
 Track Class "Action" Filename "PonceDeLeon_Act" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.12
 
 ;;; 4-5Fountain ("The Fountain of Youth")
 
-Bank "Fountain_A"
+Bank "Fountain_A" ; Jungle
 Track Class "Action" Filename "Upriver_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Jungle_Thick_amb" Volume 0.24
 
-Bank "Fountain_B"
+Bank "Fountain_B" ; Louder Jungle (Free Play)
 Track Class "Action" Filename "Upriver_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Jungle_Thick_amb" Volume 0.30
 
-Bank "Fountain_C"
+Bank "Fountain_C" ; Aqua de Vida (cave entrance)
 Track Class "Action" Filename "Upriver_Qui" Volume 0.42 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.45
 
-Bank "Fountain_D"
+Bank "Fountain_D" ; Battle for the Fountain of Youth
 Track Class "Action" Filename "Action1_Evil" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "CaveBattle_amb" Volume 0.70 Downmix NoRear
 
-Bank "Fountain_E"
+Bank "Fountain_E" ; Blackbeard boss
 Track Class "Action" Filename "Fountain_E_Act" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.30
 
