--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -69,7 +69,7 @@ Track Class "Quiet" Filename "StatusScreen4" Volume 0.22 Downmix StereoOnly Cue 
 
 ;;; Hub
 
-Bank "Hub_A" ; outside and taverns, including nighttime - also used by _B and _C
+Bank "Hub_A" ; outside and taverns, including nighttime ("FreePlay" rooms) - also used by _B and _C
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
 
@@ -78,13 +78,15 @@ Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
 
 ;;; Bonus Level - The Ride
 
-Bank "TheRide_A"
+Bank "TheRide_A" ; Curse of the Black Pearl
 Track Class "Quiet" Filename "TheRideMusic" Volume 0.50 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.30
 
-Bank "TheRide_B"
+Bank "TheRide_B" ; Davy Jones Duology
 Track Class "Quiet" Filename "TheRideMusic" Volume 0.50 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.18
+
+; TheRide_C - On Stranger Tides (USING TheRide_A)
 
 
 ;;; Special dance music
@@ -92,7 +94,7 @@ Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.18
 Bank "PirateDisco" 
 Track Class "Quiet" Filename "PirateDisco" Volume 0.50 Downmix StereoOnly Cue 00.00
 
-Bank "GroovyJack" ; Dancing Jack Sparrow, I think
+Bank "GroovyJack" ; Dancing Jack Sparrow
 Track Class "Quiet" Filename "TheRideMusic" Volume 0.45 Downmix StereoOnly Cue 00.00
 
 
@@ -295,6 +297,8 @@ Track Class "Quiet" Filename "Singapore_Qui" Volume 0.26 Downmix StereoOnly Cue 
 Track Class "Action" Filename "Singapore_Act" Volume 0.30 Downmix StereoOnly Cue 00.00 Cue 37.45 Cue 85.95 Cue 117.84 Cue 218.30
 Track Class "Ambience" Filename "SingaporeExt_amb" Volume 0.75
 
+; Singapore_B (USING Singapore_A)
+
 Bank "Singapore_C"
 Track Class "Quiet" Filename "Singapore_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 76.35 Cue 128.70 Cue 224.50
 Track Class "Ambience" Filename "SingaporeInt_amb" Volume 0.60
@@ -368,6 +372,8 @@ Bank "Maelstrom_B"
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.24 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
+; no Maelstrom_C
+
 Bank "Maelstrom_D"
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.24 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
@@ -378,7 +384,7 @@ Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
 ;;; 4-1London ("London Town")
 
-Bank "London_A" ; Great Hall
+Bank "London_A" ; Banquet Hall
 Track Class "Action" Filename "London_Act" Volume 0.22 Downmix StereoOnly Cue 00.00 ;Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "StoneRoom_amb" Volume 0.70
 
@@ -446,6 +452,7 @@ Bank "PonceDeLeon_C" ; Spaniard boss fight and Palm Tree Escape
 Track Class "Quiet" Filename "PonceDeLeon_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00
 Track Class "Action" Filename "PonceDeLeon_Act" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.12
+
 
 ;;; 4-5Fountain ("The Fountain of Youth")
 
@@ -821,4 +828,4 @@ Bank "4-5Fountain_Outro"
 Track Class "Cutscene" Filename "4-5Fountain_Outro" Volume 0.6
 
 
-; That's all the tracks; remember that dead men tell no tales....
+; That's the end of the tracks; remember that dead men tell no tales....
