Tt_clean_text_files\LPotC\AUDIO\TRACKS.CFG
Additional comments for Singapore and Dutchman Escape

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -292,22 +292,22 @@ Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.50
 
 ;;; 3-1Singapore ("Singapore")
 
-Bank "Singapore_A"
+Bank "Singapore_A" ; Outside, starting area
 Track Class "Quiet" Filename "Singapore_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 76.35 Cue 128.70 Cue 224.50
 Track Class "Action" Filename "Singapore_Act" Volume 0.30 Downmix StereoOnly Cue 00.00 Cue 37.45 Cue 85.95 Cue 117.84 Cue 218.30
 Track Class "Ambience" Filename "SingaporeExt_amb" Volume 0.75
 
-; Singapore_B (USING Singapore_A)
+; Singapore_B - Outside, ending area (USING Singapore_A)
 
-Bank "Singapore_C"
+Bank "Singapore_C" ; Basement of steam room
 Track Class "Quiet" Filename "Singapore_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 76.35 Cue 128.70 Cue 224.50
 Track Class "Ambience" Filename "SingaporeInt_amb" Volume 0.60
 
-Bank "SteamRoom"
+Bank "SteamRoom" ; Bath house; part of _C
 Track Class "Quiet" Filename "Singapore_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 76.35 Cue 128.70 Cue 224.50
 Track Class "Ambience" Filename "SteamRoom_amb" Volume 0.60
 
-Bank "Singapore_Act"
+Bank "Singapore_Act" ; Brits attack; occurs in _B. Will not retrigger if leaving and returning to room.
 Track Class "Action" Filename "Singapore_Act" Volume 0.30 Downmix StereoOnly Cue 00.00 Cue 37.45 Cue 85.95 Cue 117.84 Cue 218.30
 Track Class "Ambience" Filename "SingaporeExt_amb" Volume 0.75
 
@@ -329,11 +329,11 @@ Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.75
 
 ;;; 3-3DutchmanEscape ("Norrington's Choice")
 
-Bank "DutchManEscape_A"
+Bank "DutchManEscape_A" ; On deck
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
-Bank "DutchManEscape_B"
+Bank "DutchManEscape_B" ; Below decks
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.35
 
@@ -341,7 +341,7 @@ Bank "DutchManEscape_B_Act"
 Track Class "Action" Filename "DutchManEscape_Act" Volume 0.28 Downmix StereoOnly Cue 04.24 Cue 50.50 Cue 90.00 Cue 133.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.35
 
-Bank "DutchManEscape_C"
+Bank "DutchManEscape_C" ; On sides of ship, including front and back
 Track Class "Action" Filename "DutchManEscape_Act" Volume 0.28 Downmix StereoOnly Cue 04.24 Cue 50.50 Cue 90.00 Cue 133.00
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
