Gibbs has nothing to do with the blacksmith shop

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -102,7 +102,7 @@ Track Class "Quiet" Filename "TheRideMusic" Volume 0.45 Downmix StereoOnly Cue 0
 
 ;;; 1-1PortRoyal ("Port Royal")
 
-Bank "PortRoyalA" ; Gibb's smithy
+Bank "PortRoyalA" ; Mr. Brown's smithy
 Track Class "Quiet" Filename "Quiet1" Volume 0.27 Downmix StereoOnly Cue 00.00 Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1" Volume 0.17 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "StoneRoom_amb" Volume 0.70
