LPotC\AUDIO\TRACKS.CFG
no need to stereotype brits

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -137,7 +137,7 @@ Track Class "Quiet" Filename "TwoHornPipesMuff" Volume 0.35 Downmix StereoOnly C
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "TortugaIntMuff_amb" Volume 0.60
 
-Bank "Tortuga_B_WhoreHouse" ; Tt is British, all right
+Bank "Tortuga_B_WhoreHouse" ; Wench house, to be more polite
 Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "TortugaIntMuff_amb" Volume 0.50
 
