--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -82,7 +82,7 @@ Bank "TheRide_A" ; Curse of the Black Pearl
 Track Class "Quiet" Filename "TheRideMusic" Volume 0.50 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.30
 
-Bank "TheRide_B" ; Davy Jones Duology
+Bank "TheRide_B" ; At World's End
 Track Class "Quiet" Filename "TheRideMusic" Volume 0.50 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.18
 
@@ -123,7 +123,7 @@ Track Class "Ambience" Filename "WindLight_amb" Volume 0.45
 
 ;;; 1-2Tortuga ("Tortuga")
 
-Bank "Tortuga_A"
+Bank "Tortuga_A" ; Port
 Track Class "Quiet" Filename "Tortuga_Qui" Volume 0.17 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "TortugaExt_amb" Volume 0.50
 
@@ -160,17 +160,17 @@ Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.80
 
 ;;; 1-4JacksIsland ("Black Sam's Spit")
 
-Bank "JacksIsland_A"
+Bank "JacksIsland_A" ; Day one - above ground
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Action" Filename "Danger_Creature" Volume 0.43 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
 
-Bank "JacksIsland_B"
+Bank "JacksIsland_B" ; Rum locker
 Track Class "Quiet" Filename "JacksIsland_B_Qui" Volume 0.23 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.20
 
-Bank "JacksIsland_C"
-Track Class "Quiet" Filename "WindMed_amb" Volume 0.23 Downmix StereoOnly Cue 00.00
+Bank "JacksIsland_C" ; Day two - "Why is the rum gone?!"
+Track Class "Quiet" Filename "WindMed_amb" Volume 0.23 Downmix StereoOnly Cue 00.00 ; that's not a music track, Tt...
 Track Class "Ambience" Filename "SeaShore_Light_amb" Volume 0.50
 
 
@@ -228,7 +228,7 @@ Track Class "Quiet" Filename "Upriver_Qui" Volume 0.43 Downmix StereoOnly Cue 00
 Track Class "Action" Filename "Upriver_Act" Volume 0.24 Downmix StereoOnly Cue 39.00 Cue 10.00
 Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.12
 
-Bank "Upriver_C"
+Bank "Upriver_C" ; Tia Dalma's hut
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.43 Downmix StereoOnly Cue 70.00
 Track Class "Ambience" Filename "CreakyHut_amb" Volume 0.60
 
@@ -255,34 +255,38 @@ Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.30
 
 ;;; 2-4IslaCruces ("Isla Cruces")
 
-Bank "IslaCruces_A"
+; Note - Areas are out of order; goes ABDC
+
+Bank "IslaCruces_A" ; Part 1 - Beach
 Track Class "Quiet" Filename "Quiet1" Volume 0.28 Downmix StereoOnly Cue 00.00 Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.40
 
-Bank "IslaCruces_B"
+Bank "IslaCruces_B" ; Part 2 - Inland in and around watermill - Jack Sparrow boss fight
 Track Class "Quiet" Filename "StatusScreen2" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.30
 
-Bank "IslaCruces_C"
+Bank "IslaCruces_C" ; Part 4 - Battle on the Beach
 Track Class "Action" Filename "StatusScreen2" Volume 0.28 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.30
 
-Bank "IslaCruces_D"
+Bank "IslaCruces_D" ; Part 3 - Wheel of Fortune
 Track Class "Action" Filename "Action1_Heroic" Volume 0.22 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "IslaCrucesWheel_amb" Volume 0.28
 
 
 ;;; 2-5Kraken ("The Kraken")
 
-Bank "Kraken_A"
+; Note - Areas are out of order; goes BAC.
+
+Bank "Kraken_A" ; On deck - abandon ship
 Track Class "Action" Filename "Kraken_Act" Volume 0.28 Downmix StereoOnly Cue 114.77 Cue 158.77 Cue 00.00 Cue 18.60 Cue 77.30
 Track Class "Ambience" Filename "Kraken_A_amb" Volume 0.50
 
-Bank "Kraken_B"
+Bank "Kraken_B" ; Below decks
 Track Class "Action" Filename "Kraken_Act" Volume 0.28 Downmix StereoOnly Cue 00.00 Cue 18.60 Cue 77.30 Cue 114.77 Cue 158.77
 Track Class "Ambience" Filename "KrakenInt_amb" Volume 0.50
 
-Bank "Kraken_C"
+Bank "Kraken_C" ; "Hello Beastie"
 Track Class "Action" Filename "Kraken_Act" Volume 0.32 Downmix StereoOnly Cue 00.00 Cue 18.60 Cue 77.30 Cue 114.77 Cue 158.77
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.50
 
@@ -364,17 +368,17 @@ Track Class "Ambience" Filename "PirateBay_amb" Volume 0.40 Cue 0.00 Cue 30.00
 
 ;;; 3-5Maelstrom ("The Maelstrom")
 
-Bank "Maelstrom_A"
+Bank "Maelstrom_A" ; Calpyso transforms
 Track Class "Action" Filename "MidAction1" Volume 0.18 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
-Bank "Maelstrom_B"
+Bank "Maelstrom_B" ; Black Pearl - Wedding
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.24 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
 ; no Maelstrom_C
 
-Bank "Maelstrom_D"
+Bank "Maelstrom_D" ; Flying Dutchman - Davy Jones boss
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.24 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
@@ -402,6 +406,8 @@ Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
 
 ;;; 4-2QueenAnn ("Queen Anne's Revenge")
+
+; Note - Areas are out of order; goes B, B_Act, A.
 
 Bank "QueenAnn_A" ; Blackbeard Appears (on deck)
 Track Class "Action" Filename "Action2_Evil" Volume 0.26 Downmix StereoOnly Cue 00.00
