--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -255,28 +255,28 @@ Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.30
 
 ;;; 2-4IslaCruces ("Isla Cruces")
 
-; Note - Areas are out of order; goes ABDC
+; Note - Rooms are out of order; goes ABDC
 
-Bank "IslaCruces_A" ; Part 1 - Beach
+Bank "IslaCruces_A" ; Beach
 Track Class "Quiet" Filename "Quiet1" Volume 0.28 Downmix StereoOnly Cue 00.00 Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.40
 
-Bank "IslaCruces_B" ; Part 2 - Inland in and around watermill - Jack Sparrow boss fight
+Bank "IslaCruces_B" ; Inland in and around watermill - Jack Sparrow boss fight
 Track Class "Quiet" Filename "StatusScreen2" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.30
 
-Bank "IslaCruces_C" ; Part 4 - Battle on the Beach
+Bank "IslaCruces_C" ; Battle on the Beach
 Track Class "Action" Filename "StatusScreen2" Volume 0.28 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.30
 
-Bank "IslaCruces_D" ; Part 3 - Wheel of Fortune
+Bank "IslaCruces_D" ; Wheel of Fortune
 Track Class "Action" Filename "Action1_Heroic" Volume 0.22 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "IslaCrucesWheel_amb" Volume 0.28
 
 
 ;;; 2-5Kraken ("The Kraken")
 
-; Note - Areas are out of order; goes BAC.
+; Note - Rooms are out of order; goes BAC.
 
 Bank "Kraken_A" ; On deck - abandon ship
 Track Class "Action" Filename "Kraken_Act" Volume 0.28 Downmix StereoOnly Cue 114.77 Cue 158.77 Cue 00.00 Cue 18.60 Cue 77.30
@@ -407,7 +407,7 @@ Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
 ;;; 4-2QueenAnn ("Queen Anne's Revenge")
 
-; Note - Areas are out of order; goes B, B_Act, A.
+; Note - Rooms are out of order; goes B, B_Act, A.
 
 Bank "QueenAnn_A" ; Blackbeard Appears (on deck)
 Track Class "Action" Filename "Action2_Evil" Volume 0.26 Downmix StereoOnly Cue 00.00
